1. Added AbstractFileAnalyzerTest; 2. Added AnalyzerTools 3. Added properties